Theme : align table on left & fixed burger menu icon back again

--- a/sites/all/themes/emindhub/css/emindhub.less
+++ b/sites/all/themes/emindhub/css/emindhub.less
@@ -527,6 +527,10 @@ table thead th,
     border: none;
 }
 
+table td {
+    text-align: left;
+}
+
 table thead th a,
 .table-header a {
     color: @lightBlue !important;
@@ -876,9 +880,12 @@ table tbody tr:nth-child(even) {
     cursor: pointer;
     padding: 0.39em;
     width: 3em;
-    position: fixed;
+    position: absolute;
+    top: 3.6em;
+    left: -3em;
+    /*position: fixed;
     top: 4.5em;
-    left: 23em;
+    left: 23em;*/
     background-color: @white;
 }
 
